--- a/OHR-WhatsNewBot/example_config.json
+++ b/OHR-WhatsNewBot/example_config.json
@@ -3,8 +3,11 @@
 	"ALLOWED_CHANNELS": [
 	  123456789012345, 987654321012345
 	],
+	"UPDATES_CHANNEL": 123456789012345,
+	"MINUTES_PER_CHECK": 240,
 	"COOLDOWN_TIME": 120,
 	"MSG_SIZE": 1976,
 	"RELEASE_WHATSNEW_URL": "https://hamsterrepublic.com/ohrrpgce/whatsnew.txt",
-	"NIGHTLY_WHATSNEW_URL": "https://raw.githubusercontent.com/ohrrpgce/ohrrpgce/wip/whatsnew.txt"
-  }
+	"GITHUB_REPO": "ohrrpgce/ohrrpgce",
+	"GITHUB_BRANCH": "wip",
+}
