--- a/OHR-WhatsNewBot/example_config.json
+++ b/OHR-WhatsNewBot/example_config.json
@@ -1,4 +1,5 @@
 {
+	"STATE_DIR": "state",
 	"APP_TOKEN": "Insert your app token here.",
 	"ALLOWED_CHANNELS": [
 	  123456789012345, 987654321012345
