Add cooldowns to and descriptions of commands
!whatsnew has a separate cooldown constant which is much longer.

Also, cooldowns are per-guild, not per-user.

--- a/OHR-WhatsNewBot/example_config.json
+++ b/OHR-WhatsNewBot/example_config.json
@@ -6,7 +6,8 @@
 	],
 	"UPDATES_CHANNEL": 123456789012345,
 	"MINUTES_PER_CHECK": 240,
-	"COOLDOWN_TIME": 120,
+	"COOLDOWN_TIME": 30,
+	"WHATSNEW_COOLDOWN_TIME": 120,
 	"MSG_SIZE": 1976,
 	"EMBED_SIZE": 4000,
 	"RELEASE_WHATSNEW_URL": "https://hamsterrepublic.com/ohrrpgce/whatsnew.txt",
