Monitor nightly-check.ini and only report git/log updates when new nightlies are available or MAX_CHECK_DELAY_HOURS exceeded
Also provide short links to nightlies after whatsnew/IMPORTANT-nightly.txt changes.

Added ohrlogs.url_changed and fixed a couple dubious uses of save_from_url caching.

--- a/OHR-WhatsNewBot/example_config.json
+++ b/OHR-WhatsNewBot/example_config.json
@@ -5,7 +5,8 @@
 	  123456789012345, 987654321012345
 	],
 	"UPDATES_CHANNEL": 123456789012345,
-	"MINUTES_PER_CHECK": 240,
+	"MINUTES_PER_CHECK": 120,
+	"MAX_CHECK_DELAY_HOURS": 26,
 	"COOLDOWN_TIME": 30,
 	"WHATSNEW_COOLDOWN_TIME": 120,
 	"MSG_SIZE": 1976,
