Only show first CHUNKS_LIMIT (3) chunks of !whatsnew
Also increase git log headline length limit

--- a/OHR-WhatsNewBot/example_config.json
+++ b/OHR-WhatsNewBot/example_config.json
@@ -9,8 +9,9 @@
 	"MAX_CHECK_DELAY_HOURS": 26,
 	"COOLDOWN_TIME": 30,
 	"WHATSNEW_COOLDOWN_TIME": 120,
-	"MSG_SIZE": 1976,
+	"MSG_SIZE": 1990,
 	"EMBED_SIZE": 4000,
+	"CHUNKS_LIMIT": 3,
 	"RELEASE_WHATSNEW_URL": "https://hamsterrepublic.com/ohrrpgce/whatsnew.txt",
 	"NIGHTLY_CHECK_URL": "https://hamsterrepublic.com/ohrrpgce/nightly/nightly-check.ini",
 	"GITHUB_REPO": "ohrrpgce/ohrrpgce",
