--- a/OHR-WhatsNewBot/example_config.json
+++ b/OHR-WhatsNewBot/example_config.json
@@ -8,10 +8,12 @@
 	"UPDATES_CHANNEL": 123456789012345,
 	"MINUTES_PER_CHECK": 120,
 	"MAX_CHECK_DELAY_HOURS": 26,
+	"SS_CACHE_SEC": 120,
 	"COOLDOWN_TIME": 30,
 	"WHATSNEW_COOLDOWN_TIME": 120,
 	"MSG_SIZE": 1990,
 	"EMBED_SIZE": 4000,
+	"GAME_DESCR_EMBED_SIZE": 250,
 	"CHUNKS_LIMIT": 3,
 	"RELEASE_WHATSNEW_URL": "https://hamsterrepublic.com/ohrrpgce/whatsnew.txt",
 	"NIGHTLY_CHECK_URL": "https://hamsterrepublic.com/ohrrpgce/nightly/nightly-check.ini",
