Report new and added games on Slime Salad

--- a/OHR-WhatsNewBot/example_config.json
+++ b/OHR-WhatsNewBot/example_config.json
@@ -8,6 +8,7 @@
 	"UPDATES_CHANNEL": 123456789012345,
 	"MINUTES_PER_CHECK": 120,
 	"MAX_CHECK_DELAY_HOURS": 26,
+	"SS_CHECK_HOURS": 8,
 	"SS_CACHE_SEC": 120,
 	"COOLDOWN_TIME": 30,
 	"WHATSNEW_COOLDOWN_TIME": 120,
