Document config settings, update README & .gitignore, and add requirements.txt
Renamed COOLTIME_TIME to COOLDOWN_SEC

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
+*~
+\#*\#
+.*
 config.json
-*.txt
 OHR-WhatsNewBot/config.json
-OHR-WhatsNewBot/*.json
-OHR-WhatsNewBot/*.txt
+OHR-WhatsNewBot/state/
+__pycache__
