--- a/OHR-WhatsNewBot/example_config.json
+++ b/OHR-WhatsNewBot/example_config.json
@@ -10,8 +10,8 @@
 	"MAX_CHECK_DELAY_HOURS": 26,
 	"SS_CHECK_HOURS": 8,
 	"SS_CACHE_SEC": 120,
-	"COOLDOWN_TIME": 30,
-	"WHATSNEW_COOLDOWN_TIME": 120,
+	"COOLDOWN_SEC": 30,
+	"WHATSNEW_COOLDOWN_SEC": 120,
 	"MSG_SIZE": 1990,
 	"EMBED_SIZE": 4000,
 	"GAME_DESCR_EMBED_SIZE": 250,
